fixed mapped image scale and alignment. I hate CSS

--- a/web/styles/css/main.css
+++ b/web/styles/css/main.css
@@ -313,10 +313,25 @@ input[type="checkbox"] {
     max-height: 100%;
 }
 
-#output-canvas,
-#overlay-canvas {
+.contain-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+
     width: 100%;
     height: 100%;
+
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#output-canvas,
+#overlay-canvas {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
     object-fit: contain;
     display: block;
 }
